--- a/404.html
+++ b/404.html
@@ -1,14 +1,16 @@
----
-layout: default
-title: "Page not found"
-permalink: 404.html
-no_version_test: true
-no_feedback: true
-generate_nav_for_all_versions: true
----
-
-<div class="page">
+<div class="row row-full row-offcanvas row-offcanvas-left">
+  <div id="page-content-wrapper">
+    <div class="container-fluid">
+      <div class="row row-full content">
+        
+        
+        <div class="page">
   <h1 class="page-title">Page not found</h1>
   <p class="lead">The page you were trying to reach could not be found: it may have been renamed or moved to another space, or the name you requested may be incomplete.</p>
 </div>
-<script src="{{ site.baseurl }}/public/js/process404.js"></script>
+<script src="/kaa/public/js/process404.js"></script>
+
+      </div>
+    </div>
+  </div>
+</div>
